--- a/DeckOfCards/DeckOfCards.csproj
+++ b/DeckOfCards/DeckOfCards.csproj
@@ -34,8 +34,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Test.cs" />
     <Compile Include="Deck.cs" />
+    <Compile Include="DeckTest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
